# Android-ML

./: .gitignore  Build.bat  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  params.txt
include/cocos2dx/: CCDirector.h
include/cocos2dx/include/: cocos2d.h
include/cocos2dx/layers_scenes_transitions_nodes/: CCLayer.h
include/gd/: MenuLayer.h  gd.h
src/: main.cpp
x32/jni/: Android.mk
x32/jni/include/: Utils.h
x32/jni/libs/cocos2d/: CCDirector.h
x32/jni/libs/cocos2d/platform/: CCFileUtils.h
x32/jni/libs/cocos2dx/actions/: CCActionInstant.h
x32/jni/libs/cocos2dx/include/: cocos2d.h
x32/jni/libs/cocos2dx/menu_nodes/: CCMenuItemSpriteExtra.h
x32/jni/libs/cocos2dx/platform/: CCFileUtils.h  CCPlatformConfig.h
x32/jni/libs/gd/: CreatorLayer.h  MenuLayer.h  gd.h
x32/jni/libs/hook/: inlineHook.c  inlineHook.h  relocate.c  relocate.h
x32/jni/src/: main.cpp
